@@ -12,8 +12,6 @@ import com.daqem.grieflogger.model.action.ItemAction;
 import com.daqem.grieflogger.model.history.IHistory;
 import com.daqem.grieflogger.player.GriefLoggerServerPlayer;
 import com.mojang.authlib.GameProfile;
-import dev.architectury.utils.EnvExecutor;
-import net.fabricmc.api.EnvType;
 import net.minecraft.core.BlockPos;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.network.ServerGamePacketListenerImpl;
@@ -62,11 +60,12 @@ public abstract class MixinServerPlayer extends Player implements GriefLoggerSer
     @Unique
     public void grieflogger$sendInspectMessage(List<IHistory> historyList) {
         if (historyList.isEmpty()) {
-            sendSystemMessage(GriefLogger.translate("lookup.no_history", GriefLogger.getName()));
+            if (((Player) this) instanceof ServerPlayer serverPlayer)
+                serverPlayer.sendSystemMessage(GriefLogger.translate("lookup.no_history", GriefLogger.getName()));
         } else {
             List<Page> pages = Page.convertToPages(historyList, true);
             grieflogger$setPages(pages);
-            Page pageToDisplay = pages.get(0);
+            Page pageToDisplay = pages.getFirst();
             pageToDisplay.sendToPlayer(grieflogger$asServerPlayer());
         }
     }
@@ -89,14 +88,17 @@ public abstract class MixinServerPlayer extends Player implements GriefLoggerSer
 
     @Inject(at = @At("HEAD"), method = "openMenu")
     public void openMenu(MenuProvider menuProvider, CallbackInfoReturnable<OptionalInt> cir) {
-        Optional<BaseContainerBlockEntity> container = ContainerHandler.getContainer(menuProvider);
-        if (container.isPresent()) {
-            this.grieflogger$containerTransactionManager = new ContainerTransactionManager(container.get());
-        } else {
-            ContainerHandler.getContainers(menuProvider).ifPresent(containers -> {
-                this.grieflogger$containerTransactionManager = new ContainersTransactionManager(containers);
-            });
-        }
+        EnvExecutor.getInEnv(EnvType.SERVER, () -> () -> {
+            Optional<BaseContainerBlockEntity> container = ContainerHandler.getContainer(menuProvider);
+            if (container.isPresent()) {
+                this.grieflogger$containerTransactionManager = new ContainerTransactionManager(container.get());
+            } else {
+                ContainerHandler.getContainers(menuProvider).ifPresent(containers -> {
+                    this.grieflogger$containerTransactionManager = new ContainersTransactionManager(containers);
+                });
+            }
+            return null;
+        });
     }
 
     @Inject(at = @At("HEAD"), method = "doCloseContainer()V")
@@ -116,6 +118,16 @@ public abstract class MixinServerPlayer extends Player implements GriefLoggerSer
             if (!grieflogger$itemQueue.isEmpty()) {
                 Services.ITEM.insertMap(getUUID(), level(), blockPosition(), new HashMap<>(grieflogger$itemQueue));
                 grieflogger$itemQueue.clear();
+            }
+            return null;
+        });
+    }
+
+    @Inject(method = "drop(Lnet/minecraft/world/item/ItemStack;ZZ)Lnet/minecraft/world/entity/item/ItemEntity;", at = @At("RETURN"))
+    private void drop(ItemStack itemStack, boolean bl, boolean bl2, CallbackInfoReturnable<ItemEntity> cir) {
+        EnvExecutor.getInEnv(EnvType.SERVER, () -> () -> {
+            if (cir.getReturnValue() != null) {
+                DropItemEvent.onDropItem(this, cir.getReturnValue());
             }
             return null;
         });
